Changelog
=========

1.7.10 - unreleased
-------------------

- Adds the appendTo option of autocomplete to insert the result ul element
  relative to the input field. [10171]
  [Cesar Gonzalez]

- Adds ccs style to destination object autocomplete of the wizard.
  Remove unused ul element from template. [10171]
  [Cesar Gonzalez]

- Adds CMF Subscription list style. [9861].
  [Cesar Gonzalez]

- Adds version.txt
  [Jose Dinuncio]

- Update add Wizard. Picker for selecting date and time, suggest for location,
  permission to adding Cast Topic to Cast Containe. [10171]
  [Marcin Staniszczak]

1.7.9 - December 21, 2013
-------------------------

- Removes old Redmine and Zimbra portlets.
  [Jose Dinuncio]

- Adds customizable login, sign up and help urls.
  [Jose Dinuncio]

1.7.8 - December 06, 2013
-------------------------

- Reapply missing hotfix.
  [Jose Dinuncio]

1.7.7 - December 06, 2013
-------------------------

- Update Copyright info on Footer. [9023].
  [Cesar Gonzalez]

- Fixes style of documentActions buttons. [8927]
  [Cesar Gonzalez]

- Adds star icon to follow option of new user profile [8898].
  [Cesar Gonzalez]

- Adds custom vnc style to new user profile [8898].
  [Cesar Gonzalez]

- Removes Follow functionality (JS part).
  [Cesar Gonzalez]

- Removes Follow functionality.
  [Jose Dinuncio]

1.7.6 - November 20, 2013
-------------------------

- Removes unnecessary dynatree css entries. [9049].
  [Cesar Gonzalez]

- Overrides table.pt and remove icon, fixes icon position.
  [Cesar Gonzalez]

- Adds spaca between icons in the sprite and re-style icon positions.
  [Cesar Gonzalez]

- Remove xmpp chat dependencies from theme package.
  [Vitaliy Podoba]

- Style social buttons on user author page.
  [Vitaliy Podoba]

- Add external user homepage link to user profile page.
  [Vitaliy Podoba]

- Adjust notification template and inline style. [8085].
  [Cesar Gonzalez]

- Change template for sendto [8084].
  [Marcin Staniszczak]

